--- a/less/state/s-header.less
+++ b/less/state/s-header.less
@@ -1,4 +1,4 @@
-@media screen and (max-width:800px){
+@media @tablet{
     .header__box{
         flex-direction:column;
     }
@@ -7,7 +7,7 @@
     }
 }
 
-@media screen and (max-width:640px){
+@media @mobile{
     .header{
         position: fixed;
         top: 0;
