--- a/less/state/s-navbar.less
+++ b/less/state/s-navbar.less
@@ -1,4 +1,4 @@
-@media screen and (max-width:800px){
+@media @tablet{
     .navbar{
         padding:15px;
     }
@@ -21,7 +21,7 @@
 
 
 
-@media screen and (max-width: 640px) {
+@media @mobile{
     
     body{
         padding-top: 176px;
@@ -30,7 +30,7 @@
     .navbar{
         position: fixed;
         width: 100%;
-        top: 107px;
+        top: 106px;
         z-index: 5;
     }
     .navbar__list{
