--- a/less/base/common.less
+++ b/less/base/common.less
@@ -1,3 +1,4 @@
+//rules
 .container-width{
     max-width: 820px;
     margin:auto;
@@ -13,3 +14,7 @@
     border-radius: 3px;
     display:inline-block;
 }
+
+//breakpoints
+@tablet: ~"only screen and (max-width: 800px)";
+@mobile: ~"only screen and (max-width: 640px)";
