--- a/less/layout/l-header.less
+++ b/less/layout/l-header.less
@@ -18,6 +18,7 @@
     .header__buttons-login{
         background: @violet;
         transition:background ease 0.25s;
+        .button-style;
         &:hover{
             background: #3E4860;
         }
@@ -25,6 +26,7 @@
     .header__buttons-signup{
         background: @green;
         transition:background ease 0.25s;
+        .button-style;
         &:hover{
             background: #8BBA5C;
         }
