--- a/less/state/s-contactList.less
+++ b/less/state/s-contactList.less
@@ -13,7 +13,7 @@
     background: @green;
 }
 
-@media screen and (max-width:640px){
+@media @mobile {
     .contactList{
         display: none;
         
