--- a/less/state/s-subnav-tab.less
+++ b/less/state/s-subnav-tab.less
@@ -1,4 +1,4 @@
-@media screen and (max-width:800px){
+@media @tablet{
     .subnav-tab{
         padding: 25px 10px;
     }
@@ -7,7 +7,7 @@
     }
 }
 
-@media screen and (max-width: 640px) {
+@media @mobile{
     .subnav-tab{
         background: @blue-light;
     }
